--- a/templates/template-outline.html
+++ b/templates/template-outline.html
@@ -12,23 +12,20 @@
 
     body {
       max-width: 80ch;
-      margin: 5ch auto;
-      font-family: sans-serif;
+      margin: 5ch 0;
+      padding: 0 2em;
     }
 
     .global-header {
       color: light-dark(#666, #ccc);
-      text-align: center;
       margin-bottom: 5ch;
       font-size: smaller;
-    }
-
-    .post-header {
-      text-align: center;
+      font-family: sans-serif;
     }
 
     .post-header h1 {
-      font-size: inherit;
+      font-family: sans-serif;
+      font-size: small;
       font-weight: inherit;
       display: inline-block;
       background-color: light-dark(#eee, #333);
@@ -41,10 +38,6 @@
       margin: 5ch 0;
     }
 
-    .global-nav {
-      text-align: center;
-    }
-
     .global-nav .pagination {
       display: inline-block;
       background-color: light-dark(#eee, #333);
@@ -54,7 +47,6 @@
 
     .global-footer {
       color: light-dark(#666, #ccc);
-      text-align: center;
       margin-top: 5ch;
       font-size: smaller;
     }
