media query to reduce padding

--- a/templates/template-outline.html
+++ b/templates/template-outline.html
@@ -79,6 +79,12 @@
         text-decoration: var(--shiki-dark-text-decoration) !important;
       }
     }
+
+    @media (max-width: 750px) {
+      body {
+        padding: 0 1em;
+      }
+    }
   </style>
 </head>
 
