--- a/templates/template-outline.html
+++ b/templates/template-outline.html
@@ -11,6 +11,8 @@
     }
 
     body {
+      font-family: Georgia, serif;
+      line-height: 1.3;
       max-width: 80ch;
       margin: 5ch 0;
       padding: 0 2em;
@@ -24,13 +26,13 @@
     }
 
     .post-header h1 {
-      font-family: sans-serif;
+      font-family: Courier, monospace;
       font-size: small;
       font-weight: inherit;
       display: inline-block;
       background-color: light-dark(#eee, #333);
       padding: 0.5ch 1ch;
-      border-radius: 0.5ch;
+      border-radius: 1ch;
       margin: 0;
     }
 
